# libspatialaudio

./: CMakeLists.txt  Changelog.md  README.md  meson.build
.github/workflows/: cmake-multi-platform.yml  meson-multi-platform.yml
cmake/: spatialaudio.pc.cmake
docs/: AmbisonicBinauralization.md  RendererOverview.md
include/: AmbisonicAllRAD.h  AmbisonicBase.h  AmbisonicBinauralizer.h  AmbisonicCommons.h  AmbisonicDecoder.h  AmbisonicEncoder.h  AmbisonicEncoderDist.h  AmbisonicMicrophone.h  AmbisonicOptimFilters.h  AmbisonicProcessor.h  AmbisonicRotator.h  AmbisonicShelfFilters.h  AmbisonicSource.h  AmbisonicSpeaker.h  AmbisonicZoomer.h  Ambisonics.h  BFormat.h  Coordinates.h  Decorrelator.h  GainInterp.h  LoudspeakerLayoutHulls.h  LoudspeakerLayouts.h  ObjectPanner.h  PointSourcePannerGainCalc.h  RegionHandlers.h  Renderer.h  RendererMetadata.h  Screen.h  ScreenCommon.h  SpatialaudioAPI.h  SpatialaudioConfig.h.in  SpatialaudioVersion.h  SpeakersBinauralizer.h  Tests.h  Tools.h  meson.build  mit_hrtf_filter.h  t_design_5200.h
include/adm/: AllocentricExtent.h  AllocentricPannerGainCalc.h  CartesianLoudspeakerLayouts.h  Conversions.h  DirectSpeakerGainCalc.h  DirectSpeakersGainCalc.h  GainCalculator.h  MappingRules.h  PolarExtent.h
include/dsp/: IIRFilter.h  LinkwitzRileyIIR.h
include/hrtf/: hrtf.h  mit_hrtf.h  sofa_hrtf.h
include/normal/: mit_hrtf_normal_44100.h  mit_hrtf_normal_48000.h  mit_hrtf_normal_88200.h  mit_hrtf_normal_96000.h
source/: AmbisonicBinauralizer.cpp  AmbisonicDecoderPresets.h  AmbisonicProcessor.cpp  AmbisonicPsychoacousticFilters.h  AmbisonicShelfFilters.cpp  BFormat.cpp  Decorrelator.cpp  GainInterp.cpp  LoudspeakerLayoutHulls.h  LoudspeakerLayouts.cpp  ObjectPanner.cpp  PointSourcePannerGainCalc.cpp  RegionHandlers.cpp  Renderer.cpp  meson.build
source/adm/: AllocentricExtent.cpp  AllocentricPannerGainCalc.cpp  DirectSpeakerGainCalc.cpp  DirectSpeakersGainCalc.cpp  GainCalculator.cpp  PolarExtent.cpp
source/dsp/: IIRFilter.cpp  LinkwitzRileyIIR.cpp
source/hrtf/: mit_hrtf.cpp  sofa_hrtf.cpp
source/kiss_fft/: _kiss_fft_guts.h  kiss_fftr.c
source/mit_hrtf/: mit_hrtf_lib.c  mit_hrtf_lib.h
tests/: CMakeLists.txt  TestAmbisonicDecoderPresets.cpp  TestAmbisonicShelfFilters.cpp  TestInsideAngleRange.cpp  TestRenderer.cpp  meson.build
