config_h = configure_file(
    input : 'SpatialaudioConfig.h.in',
    output : 'SpatialaudioConfig.h',
    configuration : conf_data,
    format :  'cmake',
)

# Public header files that are installed
spatialaudio_headers = [files(
    'adm/Conversions.h',
    'adm/DirectSpeakersGainCalc.h',
    'adm/MappingRules.h',
    'RendererMetadata.h',
    'Renderer.h',
    'adm/AllocentricPannerGainCalc.h',
    'adm/AllocentricExtent.h',
    'adm/CartesianLoudspeakerLayouts.h',
    'AmbisonicAllRAD.h',
    'AmbisonicBase.h',
    'AmbisonicBinauralizer.h',
    'AmbisonicCommons.h',
    'AmbisonicDecoder.h',
    'AmbisonicEncoderDist.h',
    'AmbisonicEncoder.h',
    'AmbisonicMicrophone.h',
    'AmbisonicProcessor.h',
    'AmbisonicRotator.h',
    'Ambisonics.h',
    'AmbisonicShelfFilters.h',
    'AmbisonicOptimFilters.h',
    'AmbisonicSource.h',
    'AmbisonicSpeaker.h',
    'AmbisonicZoomer.h',
    'BFormat.h',
    'Coordinates.h',
    'Decorrelator.h',
    'adm/GainCalculator.h',
    'GainInterp.h',
    'hrtf/hrtf.h',
    'hrtf/mit_hrtf.h',
    'hrtf/sofa_hrtf.h',
    'LoudspeakerLayouts.h',
    'ObjectPanner.h',
    'PointSourcePannerGainCalc.h',
    'adm/PolarExtent.h',
    'RegionHandlers.h',
    'Screen.h',
    'ScreenCommon.h',
    'SpeakersBinauralizer.h',
    'Tools.h',
    'kiss_fft/kiss_fft.h',
    'kiss_fft/kiss_fftr.h',
    'dsp/IIRFilter.h',
    'dsp/LinkwitzRileyIIR.h',
    'SpatialaudioAPI.h',
    'SpatialaudioVersion.h',
), config_h]

spatialaudio_incdirs = include_directories('.')
