# Tests

e = executable('TestInsideAngleRange', 'TestInsideAngleRange.cpp', dependencies: [libspatialaudio_dep])
test('TestInsideAngleRange', e)

e = executable('TestAmbisonicShelfFilters', 'TestAmbisonicShelfFilters.cpp', dependencies: [libspatialaudio_dep])
test('TestAmbisonicShelfFilters', e)

e = executable('TestAmbisonicDecoderPresets', 'TestAmbisonicDecoderPresets.cpp', dependencies: [libspatialaudio_dep])
test('TestAmbisonicDecoderPresets', e)

e = executable('TestRenderer', 'TestRenderer.cpp', dependencies: [libspatialaudio_dep])
test('TestRenderer', e)
