# Tests

e = executable('TestInsideAngleRange', 'TestInsideAngleRange.cpp',
               dependencies: [libspatialaudio_dep],
               build_by_default: false)
test('TestInsideAngleRange', e)

e = executable('TestAmbisonicShelfFilters', 'TestAmbisonicShelfFilters.cpp',
               dependencies: [libspatialaudio_dep],
               build_by_default: false)
test('TestAmbisonicShelfFilters', e)

e = executable('TestAmbisonicDecoderPresets', 'TestAmbisonicDecoderPresets.cpp',
               dependencies: [libspatialaudio_dep],
               build_by_default: false)
test('TestAmbisonicDecoderPresets', e)

e = executable('TestRenderer', 'TestRenderer.cpp',
               dependencies: [libspatialaudio_dep],
               build_by_default: false)
test('TestRenderer', e)
